# zkpmerkle

./: .gitignore  README.md  package-lock.json  package.json
circuits/: airdrop.circom  airdrop_verification_key.json
rust/: Cargo.toml
