[package]
name = "zkvote-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
ark-bn254 = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
lmdb = "0.8"
sha2 = "0.10"
sha3 = "0.10"
